--- a/src/scss/qc-sgd-no-grid.scss
+++ b/src/scss/qc-sgd-no-grid.scss
@@ -10,4 +10,5 @@
 @use "./components/icons" as *;
 @use "./components/notice" as *;
 @use "./components/pivHeader" as *;
+@use "./components/pivFooter" as *;
 @use "./components/alert" as *;
