--- a/src/scss/components/_pivHeader.scss
+++ b/src/scss/components/_pivHeader.scss
@@ -5,15 +5,8 @@
 qc-piv-header {
     display: block;
     min-height: 72px;
-    visibility: hidden;
     background-color: token-value(color, blue, piv);
     width: 100%;
-
-    &.mounted {
-        min-height: inherit;
-        max-height: inherit;
-        visibility: visible;
-    }
 
     [slot=search-zone] > *:first-child {
         padding: token-value(spacer xs) 0 token-value(spacer md) 0;
@@ -90,7 +83,7 @@ qc-piv-header {
             justify-content: flex-end;
             align-items: center;
 
-            .links {
+            .links ul {
                 @extend %piv-links;
             }
             @include media-mobile() {
@@ -115,7 +108,7 @@ qc-piv-header {
 }
 
 %piv-links {
-    ul {
+    &,& ul {
         list-style: none;
         padding: 0 0 0 token-value(spacer xs);
         margin: 0;
