--- a/src/scss/components/_icons.scss
+++ b/src/scss/components/_icons.scss
@@ -40,6 +40,11 @@
   &.qc-arrow-up-white {
     background-image: url(#{$img-dir}/qc-sprite.svg?v={{pkg-version}}#arrow-up-white);
   }
+
+  &.qc-arrow-up-white-2 {
+    background-image: url(#{$img-dir}/qc-sprite.svg?v={{pkg-version}}#arrow-up-white-2);
+  }
+
   
   &.qc-clipboard {
     background-image: url(#{$img-dir}/qc-sprite.svg?v={{pkg-version}}#clipboard);
