--- a/src/scss/qc-sgd-no-grid.scss
+++ b/src/scss/qc-sgd-no-grid.scss
@@ -12,3 +12,4 @@
 @use "./components/pivHeader" as *;
 @use "./components/pivFooter" as *;
 @use "./components/alert" as *;
+@use "./components/toTop" as *;
