--- a/src/scss/settings/_tokens.scss
+++ b/src/scss/settings/_tokens.scss
@@ -70,7 +70,7 @@ $xl-tokens: (
         blue : (
             pale : #dae6f0,
             light : #4a98d9,
-            regular : #1479cc,
+            regular : #1472bf,
             piv: #095797,
             medium : #19406C,
             dark: $dark-blue,
