--- a/doc/scss/qc-catalog-sdg.scss
+++ b/doc/scss/qc-catalog-sdg.scss
@@ -126,20 +126,30 @@ p,h1,h2,h3,h4,h5,h6 {
     input {
       width: 100%;
       padding: rem(6) rem(12) ;
-      border: 1px solid black;
+      border: 1px solid token-value(color blue dark);
       border-right: none;
+      &:focus {
+        outline: rem(2) solid token-value(color blue pale);
+        border-right: 1px solid black;
+        z-index: 1;
+      }
+      &::placeholder {
+        font-size: token-value(font size md);
+      }
     }
     button {
-      background-size: rem(24);
-      border: 1px solid;
+      background-size: token-value(spacer md);
+      border: 1px solid token-value(color blue dark);
       border-left: none;
-      min-height: rem(24);
-      color: token-value(color blue piv);
       background-color: white;
       background-image: url("https://www.quebec.ca/typo3conf/ext/gabarit_pgu/Resources/Public/Images/Templates/loupe-piv-fonce.svg?v=1");
       background-repeat: no-repeat;
-      background-position: rem(8) rem(6.4);
-      width: rem( 2.6 * 16);
+      background-position: token-value(spacer xs) rem(6.4);
+      width: rem(2.6 * 16);
+      &:focus{
+        outline: rem(2) solid token-value(color blue pale);
+        border-left: 1px solid black;
+      }
       span {
         position: absolute;
         width: 1px;
