--- a/src/scss/components/_pivFooter.scss
+++ b/src/scss/components/_pivFooter.scss
@@ -13,7 +13,7 @@ qc-piv-footer {
   }
 
   ul {
-    margin: 0 0 rem(16) 0;
+    margin: 0 0 token-value(spacer sm) 0;
     padding: 0;
     width: 100%;
     display: flex;
@@ -22,8 +22,9 @@ qc-piv-footer {
     flex-wrap: wrap;
 
     li {
-      padding: 0 rem(16) rem(8);
+      padding: 0 token-value(spacer sm) token-value(spacer xs);
       margin: 0;
+      text-align: center;
     }
   }
 
@@ -40,4 +41,7 @@ qc-piv-footer {
     align-items: center;
   }
 
+  .copyright, [slot=copyright] {
+    font-family: token-value(font family header);
+  }
 }
