#57 : validation v1.1.2 de la trousse

--- a/doc/scss/qc-catalog-sdg.scss
+++ b/doc/scss/qc-catalog-sdg.scss
@@ -134,7 +134,7 @@ p,h1,h2,h3,h4,h5,h6 {
         z-index: 1;
       }
       &::placeholder {
-        font-size: token-value(font size md);
+        font-size: token-value(font size sm);
       }
     }
     button {
