--- a/src/scss/modules/_utils.scss
+++ b/src/scss/modules/_utils.scss
@@ -38,3 +38,15 @@
   margin-bottom: rem(1.6);
   display: inline-block;
 }
+
+@mixin sr-only() {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
