--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -867,6 +867,12 @@ Always use this function for rem values
 .qc-icon.qc-general-alert-icon {
   background-image: url(../img/qc-sprite.svg?v=1.1.2#information);
 }
+.qc-icon.qc-search {
+  background-image: url(../img/qc-sprite.svg?v=1.1.2#loupe-piv-droite);
+}
+.qc-icon.qc-search-submit {
+  background-image: url(../img/qc-sprite.svg?v=1.1.2#loupe-piv-fonce);
+}
 
 .qc-notice {
   display: flex;
@@ -935,9 +941,6 @@ qc-piv-header {
   background-color: var(--qc-color-blue-piv);
   width: 100%;
 }
-qc-piv-header [slot=search-zone] > *:first-child {
-  padding-bottom: var(--qc-spacer-md);
-}
 .qc-piv-header {
   color: var(--qc-color-white);
 }
@@ -1000,12 +1003,72 @@ qc-piv-header [slot=search-zone] > *:first-child {
     min-width: auto;
   }
 }
+.qc-piv-header .piv-top .qc-search {
+  min-width: 2.4rem;
+  height: 2.4rem;
+}
+.qc-piv-header .piv-top .qc-search span {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
 .qc-piv-header .piv-bottom .title {
   display: none;
 }
-.qc-piv-header .bouton-recherche {
-  min-width: 3.2rem;
-  min-height: 3.2rem;
+.qc-piv-header .piv-bottom .search-zone {
+  padding-bottom: var(--qc-spacer-md);
+}
+.qc-piv-header .piv-bottom .search-zone form .input-group {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+.qc-piv-header .piv-bottom .search-zone form .input-group input {
+  width: 100%;
+  padding: 0.6rem 1.2rem;
+  border: 1px solid var(--qc-color-blue-dark);
+  border-right: none;
+}
+.qc-piv-header .piv-bottom .search-zone form .input-group input:focus {
+  outline: 0.2rem solid var(--qc-color-blue-light);
+  border-right: 1px solid black;
+  z-index: 1;
+}
+.qc-piv-header .piv-bottom .search-zone form .input-group input::-moz-placeholder {
+  font-size: var(--qc-font-size-sm);
+}
+.qc-piv-header .piv-bottom .search-zone form .input-group input::placeholder {
+  font-size: var(--qc-font-size-sm);
+}
+.qc-piv-header .piv-bottom .search-zone form .input-group button {
+  display: flex;
+  justify-content: center;
+  border: 1px solid var(--qc-color-blue-dark);
+  border-left: none;
+  background-color: white;
+  width: 4.16rem;
+}
+.qc-piv-header .piv-bottom .search-zone form .input-group button:focus {
+  outline: 0.2rem solid var(--qc-color-blue-light);
+  border-left: 1px solid black;
+}
+.qc-piv-header .piv-bottom .search-zone form .input-group button .qc-search-submit {
+  min-width: 2.4rem;
+  height: 2.4rem;
+  align-self: center;
+}
+.qc-piv-header .piv-bottom .search-zone form .input-group button .sr-description {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  clip: rect(0 0 0 0);
 }
 
 qc-piv-header [slot=links], .qc-piv-header .piv-top .right-section .links ul, qc-piv-header [slot=links] ul {
@@ -1044,9 +1107,11 @@ qc-piv-header [slot=links] a:focus, .qc-piv-header .piv-top .right-section .link
   height: 0;
 }
 .go-to-content a {
+  position: absolute;
   width: 1px;
   height: 1px;
   padding: 0;
+  margin: -1px;
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
@@ -1072,9 +1137,6 @@ qc-piv-header [slot=links] a:focus, .qc-piv-header .piv-top .right-section .link
   }
   .qc-piv-header .piv-top .right-section {
     min-width: 13rem;
-  }
-  .qc-piv-header .piv-top .right-section .search-button {
-    display: none;
   }
   .qc-piv-header .piv-bottom .title {
     margin: 0;
